Added links to Ansible Roles and Docker Images

--- a/index.html
+++ b/index.html
@@ -59,9 +59,68 @@ VSVSCPubF98=
 -----END PGP PUBLIC KEY BLOCK-----</pre>
   <p class="doc">
     <a href="https://colstrom.github.io/ezmq/">EZMQ</a> |
-    <a href="https://colstrom.github.io/sac/">Small and Crunchy</a> |
-    <a href="https://github.com/colstrom/redislike/">Redislike</a>
-  </p><!-- .doc -->
+    <a href="https://github.com/colstrom/forge/">Forge</a> |
+    <a href="https://github.com/colstrom/redislike/">Redislike</a> |
+    <a href="https://colstrom.github.io/sac/">Small and Crunchy</a>
+  </p>
+  <section>
+    <h3>Ansible Roles</h3>
+    <p class="doc">
+      <a href="https://github.com/colstrom/ansible-ansible">Ansible</a> |
+      <a href="https://github.com/colstrom/ansible-apt-repository">apt-repository</a> |
+      <a href="https://github.com/colstrom/ansible-consul">Consul</a> |
+      <a href="https://github.com/colstrom/ansible-docker">Docker</a> |
+      <a href="https://github.com/colstrom/ansible-drone">Drone</a> |
+      <a href="https://github.com/colstrom/ansible-elasticsearch">ElasticSearch</a> |
+      <a href="https://github.com/colstrom/ansible-fish">fish</a> |
+      <a href="https://github.com/colstrom/ansible-fluentd">fluentd</a> |
+      <a href="https://github.com/colstrom/ansible-go">Go</a> |
+      <a href="https://github.com/colstrom/ansible-grafana">Grafana</a> |
+      <a href="https://github.com/colstrom/ansible-influxdb">InfluxDB</a> |
+      <a href="https://github.com/colstrom/ansible-java">Java</a> |
+      <a href="https://github.com/colstrom/ansible-jenkins">Jenkins</a> |
+      <a href="https://github.com/colstrom/ansible-logrotate">logrotate</a> |
+      <a href="https://github.com/colstrom/ansible-logstash">LogStash</a> |
+      <a href="https://github.com/colstrom/ansible-mariadb">MariaDB</a> |
+      <a href="https://github.com/colstrom/ansible-mongodb">MongoDB</a> |
+      <a href="https://github.com/colstrom/ansible-monit">monit</a> |
+      <a href="https://github.com/colstrom/ansible-mosh">mosh</a> |
+      <a href="https://github.com/colstrom/ansible-nodejs">node.js</a> |
+      <a href="https://github.com/colstrom/ansible-openssh">OpenSSH</a> |
+      <a href="https://github.com/colstrom/ansible-php">PHP</a> |
+      <a href="https://github.com/colstrom/ansible-postgres">Postgresql</a> |
+      <a href="https://github.com/colstrom/ansible-python">Python</a> |
+      <a href="https://github.com/colstrom/ansible-redis">Redis</a> |
+      <a href="https://github.com/colstrom/ansible-riofs">RioFS</a> |
+      <a href="https://github.com/colstrom/ansible-robot-sweatshop">Robot Sweatshop</a> |
+      <a href="https://github.com/colstrom/ansible-ruby">Ruby</a> |
+      <a href="https://github.com/colstrom/ansible-s3ql">S3QL</a> |
+      <a href="https://github.com/colstrom/ansible-silversearcher">The Silver Searcher</a> |
+      <a href="https://github.com/colstrom/ansible-sodium">Sodium</a> |
+      <a href="https://github.com/colstrom/ansible-squid">Squid</a> |
+      <a href="https://github.com/colstrom/ansible-statsd">statsd</a> |
+      <a href="https://github.com/colstrom/ansible-taiga">Taiga</a> |
+      <a href="https://github.com/colstrom/ansible-tmate">tmate</a> |
+      <a href="https://github.com/colstrom/ansible-tokumx">TokuMX</a> |
+      <a href="https://github.com/colstrom/ansible-upstart">Upstart</a> |
+      <a href="https://github.com/colstrom/ansible-zeromq">ZeroMQ</a>
+    </p>
+  </section>
+  <section>
+    <h3>Docker Images</h3>
+    <p class="doc">
+      <a href="https://github.com/colstrom/docker-mariadb">MariaDB</a> |
+      <a href="https://github.com/colstrom/docker-nginx-naxsi">nginx+naxsi</a> |
+      <a href="https://github.com/colstrom/docker-node">node.js</a> |
+      <a href="https://github.com/colstrom/docker-php-fpm">PHP</a> |
+      <a href="https://github.com/colstrom/docker-redis">Redis</a> |
+      <a href="https://github.com/colstrom/docker-ruby">Ruby</a> |
+      <a href="https://github.com/colstrom/docker-ubuntu-core">Ubuntu (Core)</a> |
+      <a href="https://github.com/colstrom/docker-ubuntu-standard">Ubuntu (Standard)</a>
+    </p>
+  </section>
+
+  <!-- .doc -->
 </div><!-- .welcome -->
   </body>
 </html>
